Fix input widths on small screens

--- a/app/assets/stylesheets/layouts/recipes.scss
+++ b/app/assets/stylesheets/layouts/recipes.scss
@@ -181,6 +181,10 @@ a {
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
 
+  .pure-form input[type=search] {
+    width: 100%;
+  }
+
   select {
     margin-left: 0.5em !important;
   }
