--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -28,3 +28,55 @@
 .commontator .secondary-button {
   border: 1px solid #ddd;
 }
+
+@media only screen and (max-width: 480px) {
+  .pure-form {
+    input:not([type]),
+    input[type=color],
+    input[type=date],
+    input[type=datetime-local],
+    input[type=datetime],
+    input[type=email],
+    input[type=month],
+    input[type=number],
+    input[type=password],
+    input[type=search],
+    input[type=tel],
+    input[type=text],
+    input[type=time],
+    input[type=url],
+    input[type=week],
+    label {
+      display: inline-block;
+      width: 90%;
+    }
+  }
+  .pure-form-aligned {
+    select, textarea {
+      width: 90%;
+    }
+  }
+}
+
+@media only screen and (min-width: 480px) {
+  .pure-form-aligned {
+    input[type="color"],
+    input[type="date"],
+    input[type="datetime-local"],
+    input[type="datetime"],
+    input[type="email"],
+    input[type="month"],
+    input[type="number"],
+    input[type="password"],
+    input[type="search"],
+    input[type="tel"],
+    input[type="text"],
+    input[type="time"],
+    input[type="url"],
+    input[type="week"],
+    select,
+    textarea {
+      width: 20em;
+    }
+  }
+}
